portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p-service
  labels:
    app: portfolioo141
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
      protocol: TCP
  selector:
    app: portfolioo141
