portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # Optional but good: strips out trailing slashes
spec:
  rules:
  - host: nnhieu.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p-service
            port:
              number: 80
